--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,9 @@ jobs:
             export FLASK_APP=/home/circleci/app/server/run.py
             flask renewdb
             pytest -x
-  push-image:
-    machine: true
-    steps:
-      - checkout
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
-      - test
+      - build-server
