--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,8 @@ workflows:
     jobs:
       - build-server
       - build-client
+  push-images:
+    jobs:    
       - build-puhs-images
           requires:
-            - build-server
-            - build-client
+            - build_and_test
