add circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,5 +81,6 @@ workflows:
       - build-server
       - build-client  
       - build-puhs-images
+          type: approval
           requires:
             - build-server
