--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ workflows:
     jobs:
       - build-server
       - build-client  
-      - build-puhs-images
-          type: approval
+      - build-puhs-images:
           requires:
             - build-server
+            - build-client  
