--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - run: docker build -t taikerliang/flask-vue-crud-server ./server
       - run: docker build -t taikerliang/flask-vue-crud-client ./client
       - run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
-
+      - run: docker tag taikerliang/flask-vue-crud-server $ECR_URL/flask-vue-crud/flask-vue-crud-server:${CIRCLE_BRANCH}
 
 workflows:
   version: 2
