--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,18 @@ jobs:
       - run:
           name: Show git commit id
           command: echo ${CIRCLE_SHA1}
+      - run:
+          name: install aws
+          command: |
+            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+            unzip awscli-bundle.zip
+            sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+      - run:
+          name: "Log in to AWS ECR"
+          command: eval $(aws ecr get-login)
       - run: docker build -t taikerliang/flask-vue-crud-server ./server
-      - run: docker build -t taikerliang/flask-vue-crud-client ./client
-      - run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
+      #- run: docker build -t taikerliang/flask-vue-crud-client ./client
+      #- run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
       - run: docker tag taikerliang/flask-vue-crud-server ${ECR_URL}/flask-vue-crud/flask-vue-crud-server:${CIRCLE_BRANCH}
       - run: docker push ${ECR_URL}/flask-vue-crud/flask-vue-crud-server:${CIRCLE_BRANCH}
 workflows:
