--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,8 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "server/requirements.txt" }}
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "client/package.json" }}
+      - run: sudo apt-get update
+      - run: sudo apt-get install python3 python3-dev python3-pip
       - run:
           name: Show current branch
           command: echo ${CIRCLE_BRANCH}
@@ -58,11 +60,8 @@ jobs:
           name: Show git commit id
           command: echo ${CIRCLE_SHA1}
       - run:
-          name: install aws
-          command: |
-            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-            unzip awscli-bundle.zip
-            sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+          name: Install aws cli
+          command: pip3 install awscli --upgrade --user
       - run:
           name: "Log in to AWS ECR"
           command: eval $(aws ecr get-login)
