--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
           command: sudo pip install awscli --upgrade --user
       - run:
           name: "Log in to AWS ECR"
-          command: eval $(aws ecr get-login)
+          command: eval $(aws ecr get-login --no-include-email)
       - run: docker build -t taikerliang/flask-vue-crud-server ./server
       #- run: docker build -t taikerliang/flask-vue-crud-client ./client
       #- run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
