--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nginx:
-    image: flask-vue-crud_nginx
+    image: flask-vue-crud-nginx
     restart: always
     build:
       dockerfile: Dockerfile
@@ -10,12 +10,12 @@ services:
       - '3000:3000'
       - '5000:5000'
   api:
-    image: flask-vue-crud_api
+    image: flask-vue-crud-api
     build:
       dockerfile: Dockerfile
       context: ./server
   client:
-    image: flask-vue-crud_client
+    image: flask-vue-crud-client
     build:
       dockerfile: Dockerfile
       context: ./client
