--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,4 +11,5 @@ COPY . .
 # Expose the port uWSGI will listen on
 EXPOSE 8000
 
-CMD ["gunicorn", "-b", "0.0.0.0:8000", "run:app"]
+#CMD ["gunicorn", "-b", "0.0.0.0:8000", "--worker-tmp-dir", "/dev/shm", "--workers=2", "--threads=4", "--worker-class=gthread", "run:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "--workers=1", "--worker-class=gthread", "run:app"]
