--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,8 @@ jobs:
       - run:
           name: Install aws cli
           command: sudo pip install awscli --upgrade --user
+      - run: export ENV=qa
+      - run: echo $ENV
       - run:
           name: "Log in to AWS ECR"
           command: eval $(aws ecr get-login --no-include-email)
