--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,6 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "client/package.json" }}
       - run: sudo apt-get update
       - run: sudo apt-get install python3 python3-dev python3-pip
-      - run: pip -V
       - run:
           name: Show current branch
           command: echo ${CIRCLE_BRANCH}
@@ -63,12 +62,10 @@ jobs:
       - run:
           name: Install aws cli
           command: sudo pip install awscli --upgrade --user
-      - run: export ENV=qa
-      - run: echo $ENV
       - run:
           name: "Log in to AWS ECR"
           command: eval $(aws ecr get-login --no-include-email)
-      - run: docker build -t taikerliang/flask-vue-crud-server ./server
+      - run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
       - run: docker build -t taikerliang/flask-vue-crud-client ./client
       - run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
       - run: docker tag taikerliang/flask-vue-crud-server ${ECR_URL}/flask-vue-crud:flask-vue-crud-server-${CIRCLE_BRANCH}
