--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "server/requirements.txt" }}
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "client/package.json" }}
+      - run: sudo rm /var/lib/apt/lists/lock
       - run: sudo apt-get update
       - run: sudo apt-get install python3 python3-dev python3-pip
       - run:
