--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,13 +47,15 @@ jobs:
     machine: true
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true 
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "server/requirements.txt" }}
       - restore_cache:
           key: deps1-{{ .Branch }}-{{ checksum "client/package.json" }}
-      - run: sudo rm /var/lib/apt/lists/lock
-      - run: sudo apt-get update
-      - run: sudo apt-get install python3 python3-dev python3-pip
+      #- run: sudo rm /var/lib/apt/lists/lock
+      #- run: sudo apt-get update
+      #- run: sudo apt-get install python3 python3-dev python3-pip
       - run:
           name: Show current branch
           command: echo ${CIRCLE_BRANCH}
