--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
 
   build-puhs-images:
     machine: true
+    working_directory: ~/app
     steps:
       - checkout
       - restore_cache:
@@ -63,18 +64,30 @@ jobs:
       - run:
           name: Install aws cli
           command: sudo pip install awscli --upgrade --user
+      - run: docker-compose version
       - run:
           name: "Log in to AWS ECR"
           command: eval $(aws ecr get-login --no-include-email)
-      - run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
-      - run: docker build -t taikerliang/flask-vue-crud-client ./client
-      - run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
-      - run: docker tag taikerliang/flask-vue-crud-server ${ECR_URL}/flask-vue-crud:flask-vue-crud-server-${CIRCLE_BRANCH}
-      - run: docker tag taikerliang/flask-vue-crud-client ${ECR_URL}/flask-vue-crud:flask-vue-crud-client-${CIRCLE_BRANCH}
-      - run: docker tag taikerliang/flask-vue-crud-nginx ${ECR_URL}/flask-vue-crud:flask-vue-crud-nginx-${CIRCLE_BRANCH}
-      - run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-server-${CIRCLE_BRANCH}
-      - run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-client-${CIRCLE_BRANCH}
-      - run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-nginx-${CIRCLE_BRANCH}
+      - run: 
+          name: set environment
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              echo BRANCH=prd > .env
+            elif [ "${CIRCLE_BRANCH}" == "qa" ]; then
+              echo BRANCH=${CIRCLE_BRANCH} > .env
+            elif [ "${CIRCLE_BRANCH}" == "stg" ]; then
+              echo BRANCH=${CIRCLE_BRANCH} > .env
+            fi
+      - run: cat .env
+      #- run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
+      #- run: docker build -t taikerliang/flask-vue-crud-client ./client
+      #- run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
+      #- run: docker tag taikerliang/flask-vue-crud-server ${ECR_URL}/flask-vue-crud:flask-vue-crud-server-${CIRCLE_BRANCH}
+      #- run: docker tag taikerliang/flask-vue-crud-client ${ECR_URL}/flask-vue-crud:flask-vue-crud-client-${CIRCLE_BRANCH}
+      #- run: docker tag taikerliang/flask-vue-crud-nginx ${ECR_URL}/flask-vue-crud:flask-vue-crud-nginx-${CIRCLE_BRANCH}
+      #- run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-server-${CIRCLE_BRANCH}
+      #- run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-client-${CIRCLE_BRANCH}
+      #- run: docker push ${ECR_URL}/flask-vue-crud:flask-vue-crud-nginx-${CIRCLE_BRANCH}
 workflows:
   version: 2
   build_and_test:
