--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,7 @@ jobs:
               echo BRANCH=${CIRCLE_BRANCH} > .env
             fi
       - run: cat .env
+      - run: docker-compose push
       #- run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
       #- run: docker build -t taikerliang/flask-vue-crud-client ./client
       #- run: docker build -t taikerliang/flask-vue-crud-nginx ./nginx
