--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,12 +72,13 @@ jobs:
           name: set environment
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              echo BRANCH=prd > .env
+              echo BRANCH=prd >> .env
             elif [ "${CIRCLE_BRANCH}" == "qa" ]; then
-              echo BRANCH=${CIRCLE_BRANCH} > .env
+              echo BRANCH=${CIRCLE_BRANCH} >> .env
             elif [ "${CIRCLE_BRANCH}" == "stg" ]; then
-              echo BRANCH=${CIRCLE_BRANCH} > .env
+              echo BRANCH=${CIRCLE_BRANCH} >> .env
             fi
+      - run: echo DOCKER_REGISTRY=${ECR_URL} >> .env
       - run: cat .env
       - run: docker-compose push
       #- run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
