--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,8 @@ jobs:
               echo BRANCH=${CIRCLE_BRANCH} >> .env
             fi
       - run: echo DOCKER_REGISTRY=${ECR_URL} >> .env
-      - run: cat .env
+      #- run: cat .env
+      - run: docker-compose build
       - run: docker-compose push
       #- run: docker build -t taikerliang/flask-vue-crud-server --build-arg ENV=qa ./server
       #- run: docker build -t taikerliang/flask-vue-crud-client ./client
