--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,27 +3,38 @@ appdirs==1.4.3
 atomicwrites==1.3.0
 attrs==19.1.0
 black==19.3b0
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
 Flask-CLI==0.4.0
 Flask-Cors==3.0.7
 Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.0
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
+idna==2.8
 importlib-metadata==0.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
+locustio==0.11.0
 MarkupSafe==1.1.1
 more-itertools==7.1.0
+msgpack==0.6.1
 packaging==19.0
 pluggy==0.12.0
+psycopg2-binary==2.8.3
 py==1.8.0
 pyparsing==2.4.0
 pytest==5.0.1
 pytz==2019.1
+pyzmq==18.0.2
+requests==2.22.0
 six==1.12.0
+SQLAlchemy==1.3.7
 toml==0.10.0
+urllib3==1.25.3
 wcwidth==0.1.7
 Werkzeug==0.15.4
 zipp==0.5.1
