--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,2 +1,5 @@
-FROM nginx
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+FROM staticfloat/nginx-certbot
+
+ARG ENV
+
+COPY ./nginx/app.${ENV}.conf /etc/nginx/conf.d/default.conf
