--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,4 +2,4 @@ FROM staticfloat/nginx-certbot
 
 ARG ENV
 
-COPY ./nginx/app.${ENV}.conf /etc/nginx/conf.d/default.conf
+COPY ./conf.d/app.${ENV}.conf /etc/nginx/conf.d/default.conf
