--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,6 +7,7 @@ ENV ENV=${ENV}
 WORKDIR '/app'
 
 COPY ./requirements.txt ./
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . .
