--- a/nginx/conf.d/app.qa.conf
+++ b/nginx/conf.d/app.qa.conf
@@ -3,26 +3,10 @@ upstream vue {
 }
 
 server {
-    listen 80;
-    server_name fv.taiker.space;
-    server_tokens off;
-
-    # Pass this particular URL off to certbot, to authenticate HTTPS certificates
-    location '/.well-known/acme-challenge' {
-        default_type "text/plain";
-        proxy_pass http://localhost:1337;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
     listen              443 ssl;
-    server_name         fv.taiker.space;
-    ssl_certificate     /etc/letsencrypt/live/fv.taiker.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/fv.taiker.space/privkey.pem;
+    server_name         client.taiker.space;
+    ssl_certificate     /etc/letsencrypt/live/client.taiker.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/client.taiker.space/privkey.pem;
 
     location / {
         proxy_pass         http://vue;
@@ -36,28 +20,11 @@ server {
     }
 }
 
-
-server {
-    listen 80;
-    server_name api.fv.taiker.space;
-    server_tokens off;
-
-    # Pass this particular URL off to certbot, to authenticate HTTPS certificates
-    location '/.well-known/acme-challenge' {
-        default_type "text/plain";
-        proxy_pass http://localhost:1337;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
 server {
     listen              443 ssl;
-    server_name         api.fv.taiker.space;
-    ssl_certificate     /etc/letsencrypt/live/api.fv.taiker.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.fv.taiker.space/privkey.pem;
+    server_name         api.taiker.space;
+    ssl_certificate     /etc/letsencrypt/live/api.taiker.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.taiker.space/privkey.pem;
 
     location / {
 
