--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
     ports:
       - '3000:3000'
       - '5000:5000'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1k"
+        max-file: "3"
   api:
     image: ${DOCKER_REGISTRY}/server:${BRANCH}
     build:
@@ -16,6 +21,11 @@ services:
       context: ./server
       args:
         ENV: ${BRANCH}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1k"
+        max-file: "3"
   client:
     image: ${DOCKER_REGISTRY}/client:${BRANCH}
     build:
@@ -23,3 +33,8 @@ services:
       context: ./client
       args:
         ENV: ${BRANCH}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1k"
+        max-file: "3"
