--- a/requirements-deploy.txt
+++ b/requirements-deploy.txt
@@ -4,18 +4,25 @@
 #
 #    pip-compile --output-file=requirements-deploy.txt requirements-deploy.in
 #
+ansible==2.8.5
+asn1crypto==0.24.0        # via cryptography
 certifi==2019.9.11        # via requests
+cffi==1.12.3              # via cryptography
 chardet==3.0.4            # via requests
 click==7.0                # via shub
+cryptography==2.7         # via ansible
 docker-py==1.10.6         # via shub
 docker-pycreds==0.4.0     # via docker-py
 idna==2.8                 # via requests
-pyyaml==5.1.2             # via shub
+jinja2==2.10.1            # via ansible
+markupsafe==1.1.1         # via jinja2
+pycparser==2.19           # via cffi
+pyyaml==5.1.2             # via ansible, shub
 requests==2.22.0          # via docker-py, scrapinghub, shub
 retrying==1.3.3           # via scrapinghub, shub
 scrapinghub==2.2.1        # via shub
 shub==2.9.0
-six==1.12.0               # via docker-py, docker-pycreds, retrying, scrapinghub, shub, websocket-client
+six==1.12.0               # via cryptography, docker-py, docker-pycreds, retrying, scrapinghub, shub, websocket-client
 toml==0.10.0              # via shub
 tqdm==4.36.1              # via shub
 urllib3==1.25.5           # via requests
