--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -4,12 +4,13 @@
 #
 #    pip-compile --output-file=requirements-base.txt requirements-base.in
 #
-asn1crypto==0.24.0        # via cryptography
-attrs==19.1.0             # via automat, service-identity, twisted
+asn1crypto==1.0.1         # via cryptography
+attrs==19.2.0             # via automat, service-identity, twisted
 automat==0.7.0            # via twisted
 certifi==2019.9.11
 cffi==1.12.3              # via cryptography
 chardet==3.0.4
+click==7.0
 constantly==15.1.0        # via twisted
 cryptography==2.7         # via pyopenssl, service-identity
 cssselect==1.1.0          # via parsel, scrapy
