--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,15 +4,62 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
+ansible==2.8.5
+asn1crypto==1.0.1
 atomicwrites==1.3.0       # via pytest
-attrs==19.2.0             # via pytest
+attrs==19.2.0
+automat==0.7.0
+certifi==2019.9.11        # via requests
+cffi==1.12.3
+chardet==3.0.4            # via requests
+click==7.0
+constantly==15.1.0
+coverage==4.5.4           # via pytest-cov
+cryptography==2.7
+cssselect==1.1.0
+docker-py==1.10.6         # via shub
+docker-pycreds==0.4.0     # via docker-py
+hyperlink==19.0.0
+idna==2.8
 importlib-metadata==0.23  # via pluggy, pytest
+incremental==17.5.0
+jinja2==2.10.3            # via ansible
+lxml==4.4.1
+markupsafe==1.1.1         # via jinja2
 more-itertools==7.2.0     # via pytest, zipp
 packaging==19.2           # via pytest
+parsel==1.5.2
 pluggy==0.13.0            # via pytest
 py==1.8.0                 # via pytest
+pyasn1-modules==0.2.6
+pyasn1==0.4.7
+pycparser==2.19
+pydispatcher==2.0.5
+pyhamcrest==1.9.0
+pyopenssl==19.0.0
 pyparsing==2.4.2          # via packaging
-pytest==5.2.0
-six==1.12.0               # via packaging
+pytest-cov==2.8.1
+pytest==5.2.1
+pyyaml==5.1.2             # via ansible, shub
+queuelib==1.5.0
+requests==2.22.0          # via docker-py, scrapinghub, shub
+retrying==1.3.3           # via scrapinghub, shub
+scrapinghub==2.2.1        # via shub
+scrapy==1.7.3
+selenium==3.141.0
+service-identity==18.1.0
+shub==2.10.0
+six==1.12.0
+toml==0.10.0              # via shub
+tqdm==4.36.1              # via shub
+twisted==19.7.0
+urllib3==1.25.6
+w3lib==1.21.0
 wcwidth==0.1.7            # via pytest
+websocket-client==0.56.0  # via docker-py
 zipp==0.6.0               # via importlib-metadata
+zope.interface==4.6.0
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip==19.2.3               # via shub
+# setuptools==41.4.0        # via pyhamcrest, zope.interface
