(Project) update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /src/setup.py
 /src/build/
 /src/project.egg-info/
+/src/.releases
 
 # python
 *.pyc
@@ -20,3 +21,6 @@ src/scrapinghub.yml
 
 # coverage
 .coverage
+
+# macOS
+.DS_Store
