--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,13 @@ jobs:
       - image: circleci/python:3.7.2
         environment:
           PIPENV_VENV_IN_PROJECT: true
+      - image: circleci/postgres:11.5-alpine
+        environment:
+          POSTGRES_USER: taiker
+          POSTGRES_DB: flask-vue
     steps:
       - checkout
-      - run: sudo apt-get install python3-pip
+      - run: pip -V
       - run: sudo pip3 install --upgrade pip
       - run:
           command: |
