update ci config & docker config

--- a/nginx/conf.d/app.dev.conf
+++ b/nginx/conf.d/app.dev.conf
@@ -1,24 +1,15 @@
-upstream vue {
-  server client:8080;
-}
-
 server {
-    listen 3000;
-        
+    listen 4000;
+    root   /app/console/dist;
     location / {
-
-        proxy_pass http://vue;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 }
 
 server {
     listen 5000;
-    
+
     location / {
 
         add_header Access-Control-Allow-Origin *;
