--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
             elif [ "${CIRCLE_BRANCH}" == "stg" ]; then
               echo BRANCH=${CIRCLE_BRANCH} >> .env
             fi
-      - run: echo DOCKER_REGISTRY=${ECR_URL}/xinyisheng-ec >> .env
+      - run: echo DOCKER_REGISTRY=${AWS_ECR_URL}/xinyisheng-ec >> .env
       - run: cat .env
       - run: docker-compose build
       - run: docker-compose push
@@ -101,13 +101,13 @@ workflows:
     jobs:
       - build-server
       - build-client  
-      - build-puhs-images:
-          requires:
-            - build-server
-            - build-client
-          filters:
-            branches:
-              only:
-                - master
-                - qa
-                - stg
+      #- build-puhs-images:
+      #    requires:
+      #      - build-server
+      #      - build-client
+      #    filters:
+      #      branches:
+      #        only:
+      #          - master
+      #          - qa
+      #          - stg
