--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build-server:
     working_directory: ~/app
     docker:
-      - image: circleci/python:3.6.4
+      - image: circleci/python:3.7.2
         environment:
           PIPENV_VENV_IN_PROJECT: true'
       - image: circleci/postgres:11.5-alpine
@@ -69,6 +69,15 @@ jobs:
       - run: docker-compose version
       - run: aws --version
       - run:
+          name: "AWS config Setting - Region"
+          command: aws configure set region ${AWS_DEFAULT_REGION}
+      - run:
+          name: "AWS config Setting - ACCESS_KEY"
+          command: aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+      - run:
+          name: "AWS config Setting - SECRET_KEY"
+          command: aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+      - run:
           name: "Log in to AWS ECR"
           command: eval $(aws ecr get-login --no-include-email)
       - run: 
@@ -81,8 +90,8 @@ jobs:
             elif [ "${CIRCLE_BRANCH}" == "stg" ]; then
               echo BRANCH=${CIRCLE_BRANCH} >> .env
             fi
-      - run: echo DOCKER_REGISTRY=${ECR_URL}/flask-vue-crud >> .env
-      #- run: cat .env
+      - run: echo DOCKER_REGISTRY=${AWS_ECR_URL}/flask-vue-crud >> .env
+      - run: cat .env
       - run: docker-compose build
       - run: docker-compose push
       - run:
