update ci config & docker config

--- a/appspec.yml
+++ b/appspec.yml
@@ -11,4 +11,8 @@ hooks:
   AfterInstall:
     - location: scripts/after-install.sh
       runas: ubuntu
-      timeout: 300
+      timeout: 30
+  ApplicationStart:
+    - location: scripts/restart.sh
+      runas: ubuntu
+      timeout: 600
