--- a/nginx/conf.d/app.dev.conf
+++ b/nginx/conf.d/app.dev.conf
@@ -25,7 +25,7 @@ server {
         add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
         add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
 
-        proxy_pass http://api:8000;
+        proxy_pass http://server:8000;
         proxy_redirect   off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
