update ci config & docker config

--- a/nginx/conf.d/app.qa.conf
+++ b/nginx/conf.d/app.qa.conf
@@ -4,9 +4,9 @@ upstream vue {
 
 server {
     listen              443 ssl;
-    server_name         client.taiker.net;
-    ssl_certificate     /etc/letsencrypt/live/client.taiker.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/client.taiker.net/privkey.pem;
+    server_name         client.qa.taiker.net;
+    ssl_certificate     /etc/letsencrypt/live/client.qa.taiker.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/client.qa.taiker.net/privkey.pem;
 
     location / {
         proxy_pass         http://vue;
@@ -22,9 +22,9 @@ server {
 
 server {
     listen              443 ssl;
-    server_name         api.taiker.net;
-    ssl_certificate     /etc/letsencrypt/live/api.taiker.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.taiker.net/privkey.pem;
+    server_name         api.qa.taiker.net;
+    ssl_certificate     /etc/letsencrypt/live/api.qa.taiker.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.qa.taiker.net/privkey.pem;
 
     location / {
 
@@ -32,7 +32,7 @@ server {
         add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
         add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
 
-        proxy_pass http://api:8000;
+        proxy_pass http://server:8000;
         proxy_redirect   off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
