update ci config & docker config

--- a/appspec.yml
+++ b/appspec.yml
@@ -16,3 +16,7 @@ hooks:
     - location: scripts/restart.sh
       runas: ubuntu
       timeout: 600
+  ValidateService:
+    - location: scripts/initial.sh
+      runas: ubuntu
+      timeout: 600
