--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -4,34 +4,37 @@
 #
 #    pip-compile --output-file=src/requirements-app.txt src/requirements-app.in
 #
-asn1crypto==1.0.1         # via cryptography
-attrs==19.2.0             # via automat, service-identity, twisted
-automat==0.7.0            # via twisted
-cffi==1.12.3              # via cryptography
+attrs==19.3.0             # via automat, service-identity, twisted
+automat==0.8.0            # via twisted
+cffi==1.13.2              # via cryptography
 click==7.0
 constantly==15.1.0        # via twisted
-cryptography==2.7         # via pyopenssl, service-identity
+cryptography==2.8         # via pyopenssl, scrapy, service-identity
 cssselect==1.1.0          # via parsel, scrapy
+faker==3.0.0
 hyperlink==19.0.0         # via twisted
 idna==2.8                 # via hyperlink
 incremental==17.5.0       # via twisted
-lxml==4.4.1               # via parsel, scrapy
+lxml==4.4.2               # via parsel, scrapy
 parsel==1.5.2             # via scrapy
-pyasn1-modules==0.2.6     # via service-identity
-pyasn1==0.4.7             # via pyasn1-modules, service-identity
+protego==0.1.16           # via scrapy
+pyasn1-modules==0.2.7     # via service-identity
+pyasn1==0.4.8             # via pyasn1-modules, service-identity
 pycparser==2.19           # via cffi
 pydispatcher==2.0.5       # via scrapy
 pyhamcrest==1.9.0         # via twisted
-pyopenssl==19.0.0         # via scrapy
+pyopenssl==19.1.0         # via scrapy
+python-dateutil==2.8.1    # via faker
 queuelib==1.5.0           # via scrapy
-scrapy==1.7.3
+scrapy==1.8.0
 selenium==3.141.0
 service-identity==18.1.0  # via scrapy
-six==1.12.0               # via automat, cryptography, parsel, pyhamcrest, pyopenssl, scrapy, w3lib
-twisted==19.7.0           # via scrapy
-urllib3==1.25.6           # via selenium
+six==1.13.0               # via automat, cryptography, faker, parsel, protego, pyhamcrest, pyopenssl, python-dateutil, scrapy, w3lib
+text-unidecode==1.3       # via faker
+twisted==19.10.0          # via scrapy
+urllib3==1.25.7           # via selenium
 w3lib==1.21.0             # via parsel, scrapy
-zope.interface==4.6.0     # via twisted
+zope.interface==4.7.1     # via scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.4.0        # via pyhamcrest, zope.interface
+# setuptools
