--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,9 +7,9 @@
 ansible==2.9.2
 attrs==19.3.0
 automat==0.8.0
-certifi==2019.11.28       # via requests
+certifi==2019.11.28
 cffi==1.13.2
-chardet==3.0.4            # via requests
+chardet==3.0.4
 click==7.0
 constantly==15.1.0
 coverage==4.5.4           # via pytest-cov
@@ -43,7 +43,7 @@ pytest==5.3.1
 python-dateutil==2.8.1
 pyyaml==5.2               # via ansible, shub
 queuelib==1.5.0
-requests==2.22.0          # via docker-py, scrapinghub, shub
+requests==2.22.0
 retrying==1.3.3           # via scrapinghub, shub
 scrapinghub==2.2.1        # via shub
 scrapy==1.8.0
