--- a/nginx/conf.d/app.qa.conf
+++ b/nginx/conf.d/app.qa.conf
@@ -4,9 +4,9 @@ upstream vue {
 
 server {
     listen              443 ssl;
-    server_name         client.taiker.cc;
-    ssl_certificate     /etc/letsencrypt/live/client.taiker.cc/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/client.taiker.cc/privkey.pem;
+    server_name         client.taiker.xyz;
+    ssl_certificate     /etc/letsencrypt/live/client.taiker.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/client.taiker.xyz/privkey.pem;
 
     location / {
         proxy_pass         http://vue;
@@ -22,9 +22,9 @@ server {
 
 server {
     listen              443 ssl;
-    server_name         api.taiker.cc;
-    ssl_certificate     /etc/letsencrypt/live/api.taiker.cc/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.taiker.cc/privkey.pem;
+    server_name         api.taiker.xyz;
+    ssl_certificate     /etc/letsencrypt/live/api.taiker.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.taiker.xyz/privkey.pem;
 
     location / {
 
