--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -6,19 +6,20 @@
 #
 attrs==19.3.0             # via automat, service-identity, twisted
 automat==20.2.0           # via twisted
-certifi==2020.4.5.1       # via requests
+certifi==2020.6.20        # via requests
 cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via requests
 click==7.1.2              # via -r src/requirements-app.in
 constantly==15.1.0        # via twisted
-cryptography==2.9.2       # via pyopenssl, scrapy, service-identity
+cryptography==3.0         # via pyopenssl, scrapy, service-identity
 cssselect==1.1.0          # via parsel, scrapy
-faker==4.0.3              # via -r src/requirements-app.in
+faker==4.1.1              # via -r src/requirements-app.in
 hyperlink==19.0.0         # via twisted
-idna==2.9                 # via hyperlink, requests
+idna==2.10                # via hyperlink, requests
 incremental==17.5.0       # via twisted
-lxml==4.5.0               # via parsel, scrapy
-parsel==1.5.2             # via scrapy
+itemadapter==0.1.0        # via scrapy
+lxml==4.5.2               # via parsel, scrapy
+parsel==1.6.0             # via scrapy
 protego==0.1.16           # via scrapy
 pyasn1-modules==0.2.8     # via service-identity
 pyasn1==0.4.8             # via pyasn1-modules, service-identity
@@ -26,17 +27,18 @@ pycparser==2.20           # via cffi
 pydispatcher==2.0.5       # via scrapy
 pyhamcrest==2.0.2         # via twisted
 pyopenssl==19.1.0         # via scrapy
+python-anticaptcha==0.7.1  # via -r src/requirements-app.in
 python-dateutil==2.8.1    # via faker
 queuelib==1.5.0           # via scrapy
-requests==2.23.0          # via -r src/requirements-app.in
-scrapy==2.1.0             # via -r src/requirements-app.in
+requests==2.24.0          # via -r src/requirements-app.in, python-anticaptcha
+scrapy==2.2.1             # via -r src/requirements-app.in
 selenium==3.141.0         # via -r src/requirements-app.in
 service-identity==18.1.0  # via scrapy
-six==1.14.0               # via automat, cryptography, parsel, protego, pyopenssl, python-dateutil, w3lib
+six==1.15.0               # via automat, cryptography, parsel, protego, pyopenssl, python-anticaptcha, python-dateutil, w3lib
 text-unidecode==1.3       # via faker
 twisted==20.3.0           # via scrapy
-urllib3==1.25.9           # via requests, selenium
-w3lib==1.21.0             # via parsel, scrapy
+urllib3==1.25.10          # via requests, selenium
+w3lib==1.22.0             # via parsel, scrapy
 zope.interface==5.1.0     # via scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
