--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -46,6 +46,7 @@ urllib3==1.26.2           # via requests, selenium
 w3lib==1.22.0             # via itemloaders, parsel, scrapy
 zope.interface==5.2.0     # via scrapy, twisted
 anticaptchaofficial==1.0.31
+ujson==4.0.2
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
