feat(internal): add the scrpit to control the deployment, there are some sensitive information in Dockerfile.*, so we ignore them.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@ ghostdriver.log
 # others
 *.releases
 *geckodriver.log
+
+# env
+.env
+
+# dockerfile
+Dockerfile.dev
+Dockerfile.eval
+Dockerfile.prd
