--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ ghostdriver.log
 # others
 *.releases
 *geckodriver.log
+
+# env
+.env
+
+# dockerfile
+Dockerfile.dev
+Dockerfile.eval
+Dockerfile.prd
